<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D279E1"
    tools:context=".PlayActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:id="@+id/total"
        android:text="@string/total_question"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#1E0151"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:gravity="center"
        android:id="@+id/question"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/choicesAnswer"
        android:text="@string/question"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choicesAnswer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/ansA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/lato_bold"
            android:text="@string/ans_a"
            android:textColor="@color/black" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/lato_bold"
            android:text="@string/ans_b"
            android:layout_margin="5dp"
            android:id="@+id/ansB"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/lato_bold"
            android:text="@string/ans_c"
            android:layout_margin="5dp"
            android:id="@+id/ansC"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_bold"
            android:backgroundTint="@color/white"
            android:text="@string/ans_d"
            android:layout_margin="5dp"
            android:id="@+id/ansD"
            android:textColor="@color/black"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/submitBtn"
        android:text="@string/next_question"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:backgroundTint="#CCC8BF"
        app:layout_constraintTop_toBottomOf="@id/choicesAnswer"/>
</androidx.constraintlayout.widget.ConstraintLayout>